# NatsukiEngine

./: .gitignore  .gitmodules  CMakeLists.txt  config.cmake  readme.md
Engine/: Saper.cpp  Saper.hpp  main.cpp
Engine/include/: GameDll.hpp  GameState.hpp  GameSystems.hpp  GlobalTime.hpp  KeyState.hpp  Natsuki.hpp  Renderer.hpp  SDL.hpp  Window.hpp
Engine/src/: GameSystems.cpp  Renderer.cpp
Saper/: Saper.cpp  StartState.cpp  StartState.hpp  TabState.cpp  TabState.hpp
Source/include/: Game.hpp  GameDll.hpp  GameState.hpp  GlobalTime.hpp  Renderer.hpp  StateManager.hpp
include/: CategoryLog.hpp  Game.hpp  GameState.hpp  GlobalTime.hpp  Handler.hpp  KeyState.hpp  Loger.hpp  Natsuki.hpp  NatsukiMain.hpp  Renderer.hpp  RendererGuard.hpp  SDL.hpp  SourceManager.hpp  StateManager.hpp  Surface.hpp  Texture.hpp  ThreadPool.hpp  Window.hpp
modules/: CategoryLog.ixx  Exception.ixx  FPSCounter.ixx  FPSDisplay.ixx  Font.ixx  Game.ixx  GameState.ixx  GlobalTime.ixx  Handler.ixx  KeyState.ixx  Loger.ixx  MessageBox.ixx  Natsuki.ixx  Renderer.ixx  RendererGuard.ixx  SDL.ixx  SDLException.ixx  SourceManager.ixx  StateManager.ixx  Surface.ixx  Text.ixx  Texture.ixx  Timer.ixx  Window.ixx
modules/ECS/: BaseComponent.ixx  BaseSystem.ixx  ComponentPool.ixx  Components.ixx  ECS.ixx  ECSLogic.ixx  Entity.ixx  Systems.ixx
modules/ECS/Component/: Color.ixx  Component.ixx  Concept.ixx  Position.ixx  PositionSize.ixx  Velocity.ixx
modules/ECS/Components/: Color.ixx  Component.ixx  Position.ixx  PositionSize.ixx  Size.ixx  Velocity.ixx
modules/ECS/System/: Concept.ixx  Movement.ixx  RenderRect.ixx  System.ixx
modules/ECS/Systems/: Movement.ixx  RenderRect.ixx  System.ixx
modules/Event/: Event.ixx  EventHandler.ixx  HandlerType.ixx  KeySystem.ixx  MouseSystem.ixx
modules/GameState/: BaseGameState.ixx  GameState.ixx  KeyState.ixx  StateManager.ixx
modules/Render/: FlipMode.ixx  Render.ixx  Renderer.ixx  RendererGuard.ixx  Sprite.ixx  Surface.ixx  Texture.ixx
modules/Resource/: BaseResource.ixx  Resource.ixx  ResourceManager.ixx
modules/Time/: DeltaTime.ixx  GlobalTime.ixx  Time.ixx  Timer.ixx
modules/UI/: Font.ixx  Text.ixx  TextEngine.ixx  UI.ixx
modules/Utils/: FlagsOperation.ixx  LazyInit.ixx  Loger.ixx  TransparentHash.ixx  Utils.ixx
src/: Game.cpp  Loger.cpp  NatsukiMain.cpp  Renderer.cpp  SDL.cpp  Surface.cpp  Texture.cpp  Window.cpp
src/users/: Game.cpp
templates/: Context.ixx  Game.cpp
